# bulbasaur-skill-cli

./: .gitignore  Makefile  README.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: task-card.yml
.github/workflows/: pylint.yml  python-publish.yml
bbsctl/: pyproject.toml
bbsctl/src/skillctl/: __init__.py  cli.py  dotenv.py  git_provenance.py  instruction_classifier.py  project_config.py  risk_matrix.py  skill_yaml.py  strictness.py  user_config.py
bbsctl/src/skillctl/agentskills/: __init__.py  agentskills-spec.yaml  frontmatter.py  rules.py  spec.py
bbsctl/src/skillctl/audit/: __init__.py  checks.py  runner.py
bbsctl/src/skillctl/commands/: __init__.py  audit_cmd.py  classify_cmd.py  compile.py  eval_cmd.py  fetch.py  gateway_cmd.py  init.py  install.py  marketplace_cmd.py  new.py  policy_cmd.py  publish.py  risk_cmd.py  run.py  strictness_cmd.py  validate.py
bbsctl/src/skillctl/compile/: __init__.py  factory.py  injection_scan.py  pipeline.py  reporter.py  steps.py
bbsctl/src/skillctl/eval/: __init__.py  base.py  behavior.py  factory.py  fuzzer.py  injection.py  injection_corpus.py  judge.py  llm_judge.py  loader.py  reproducibility.py  runner.py
bbsctl/src/skillctl/llm/: __init__.py  anthropic.py  base.py  factory.py  ollama.py  openai.py
bbsctl/src/skillctl/marketplace/: __init__.py  bundle.py  git_marketplace.py  lock.py
bbsctl/src/skillctl/messaging/: __init__.py
bbsctl/src/skillctl/ownership/: __init__.py  base.py  loader.py
bbsctl/src/skillctl/permissions/: __init__.py  base.py  engine.py  loader.py
bbsctl/src/skillctl/policy/: __init__.py  base.py  engine.py  loader.py  merger.py
bbsctl/src/skillctl/publish/: claude_code_local.py  factory.py  target.py
bbsctl/src/skillctl/run/: __init__.py  claude_agent_sdk.py  factory.py  mock.py  ollama.py
bbsctl/src/skillctl/templates/: __init__.py
bbsctl/src/skillctl/validate/: __init__.py  base.py  basic_trigger.py  enterprise_spec.py  output_contract.py  ownership_validator.py  runner.py  (+3 more)
bbsctl/tests/: test_agentskills_rules.py  test_bundle.py  test_claude_agent_sdk.py  test_clis_and_provenance.py  test_eval.py  test_exception_wrapper.py  test_injection_and_fuzzer.py  test_llm.py  test_ollama_dotenv_riskmatrix_classifier.py  test_ownership.py  test_permissions.py  test_phase2_commands.py  test_phase2_marketplace.py  test_phase2_project_config.py  test_phase2_skill_yaml.py  test_phase2_validate.py  test_policy.py  test_quickstart_flow.py  test_reproducibility.py  test_risk_and_injection_scan.py  test_user_config.py
demo/: main.py  pyproject.toml
demo/log-analyzer/: SKILL.md
demo/log-analyzer/evals/: behavior.json
docs/: bbsctl-roadmap.md  best-practices.md  configuration.md  demo.md  design-patterns.md  evaluation.md  friction-audit.md  ide-integration.md  permissions.md  quickstart.md  skill-lifecycle-framework-whitepaper.md  spec-guidelines.md  strictness-levels.md  troubleshooting.md  user-guide.md
docs/audits/: phase-1.md
docs/recipes/: share-with-team.md  ship-to-org.md
quickstart/: README.md  ci.sh
reference-plugins/hello-skill/: README.md
reference-plugins/hello-skill/evals/: behavior.json
reference-plugins/log-analyzer/: SKILL.md
reference-plugins/log-analyzer/evals/: behavior.json
sample/hello-skill/: SKILL.md
sample/log-analyzer/: README.md
skillctl/: pyproject.toml
skillctl/src/skillctl/: cli.py  strictness.py
skillctl/src/skillctl/agentskills/: rules.py
skillctl/src/skillctl/commands/: compile.py  new.py  publish.py  run.py
skillctl/src/skillctl/compile/: factory.py  pipeline.py  reporter.py  steps.py
skillctl/src/skillctl/publish/: __init__.py  claude_code_local.py
skillctl/src/skillctl/run/: __init__.py  runtime.py
skillctl/src/skillctl/templates/: __init__.py
skillctl/src/skillctl/templates/local/: SKILL.md.template
skillctl/tests/: test_doc_links.py  test_error_contract.py  test_vapor_options.py
templates/org/: README.md
templates/regulated/: README.md
templates/team/: README.md
tests/contract/: test_acceptance_validates.py  test_task_card_validates.py
(+7 files in other folders)
