[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "bbsctl"
version = "0.1.0"
description = "Bulbasaur skill framework CLI — design, compile, validate, deploy, and evaluate agent skills like production code."
readme = "../README.md"
license = { text = "Apache-2.0" }
authors = [{ name = "Bulbasaur framework" }]
requires-python = ">=3.11,<3.14"

# Base install — the five-minute promise. Stdlib + ruamel.yaml only.
# Covers: bbsctl new, bbsctl compile, bbsctl run at `local` strictness.
dependencies = [
  "ruamel.yaml>=0.18,<1.0",
]

# Optional dependency groups. Land progressively across phases (see ADR 0003).
[project.optional-dependencies]
# Phase 2: full validator suite (registry-context trigger, prompt-injection, semantic fuzz).
validator = [
  # Pinned in Phase 2 sprint 3.
]

# Phase 4: runtime components (Hook Bus, Cost Budget Enforcer, OTel exporters).
runtime = [
  # Pinned in Phase 4 sprint 1.
  # "opentelemetry-api>=1.27",
  # "opentelemetry-sdk>=1.27",
]

# Phase 3: publishing, signing, MCP Composer federation.
registry = [
  # Pinned in Phase 3 sprint 7.
  # "sigstore>=3.0",
]

# Everything — for CI runners and framework dogfooding.
full = [
  "bbsctl[validator,runtime,registry]",
]

# Development-time tooling — not user-facing.
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.5",
]

# Per ADR 0006: PyPI package name is `bbsctl`; CLI binary is `bbsctl`;
# Python module remains `skillctl` (internal import path, unchanged).
[project.scripts]
bbsctl = "skillctl.cli:main"

[project.urls]
Homepage = "<repo-url>"
Documentation = "<repo-url>/tree/main/docs"
Repository = "<repo-url>"
Issues = "<repo-url>/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/skillctl"]
exclude = [
  "**/.fuse_hidden*",  # sandbox FUSE artifacts; never real source files
]

[tool.hatch.build.targets.wheel.force-include]
"src/skillctl/templates" = "skillctl/templates"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]
